<resources>
    <string name="app_name">Simplysmart Service</string>
    <string name="action_settings">Settings</string>

    <string name="ok_button">OK</string>
    <string name="txt_login">Login</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>

    <string name="error_no_internet_connection">Please check your internet connection.</string>
    <string name="error_in_network">Oops! something went wrong.</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="txt_capture_image_selection">Please Select Your Choice</string>
    <string name="edit">Edit</string>
    <string name="reading_image">Reading Image</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="save_reading">Save Reading</string>
    <string name="error_no_data_found">No readings saved.</string>
    <string name="readings_submitted">All readings submitted.</string>
    <string name="add_data_now">Take reading now.</string>
    <string name="edit_value">EDIT</string>
    <string name="add">ADD</string>
    <string name="dummy_text">Weight of the empty truck — dropdown with truck number and editable field to update or add new truck number with photo</string>
    <string name="take_new_image">NEW</string>
    <string name="done">DONE</string>
    <string name="no_image_found">No image found</string>
    <string name="after_internet_send">Data has been submitted. It will be sent as soon as device is connected to internet.</string>
    <string name="enter_tare_weight">Enter Tare Weight</string>
    <string name="update_app_message">SimplySmart Service has a new update available on the Play Store. Stay up to date with the App to enjoy the latest features and best performance.</string>
    <string name="please_enter_remark">Please enter remark.</string>
    <string name="previous_reading_title">Add yesterday\'s readings.</string>
    <string name="old_time_text">--Click to select time of reading--</string>
    <string name="attendance">Attendance</string>
    <string name="visitor">Visitors</string>
    <string name="enter_number_of_person">Please enter number of people</string>
    <string name="enter_details">Enter details</string>
    <string name="click_here_to_take_photo">Click here to take photo :</string>
    <string name="alert_txt_madatory">We strongly recommend you enter the mandatory readings :</string>
    <string name="alert_txt_upload_without_image">All images have not been uploaded yet. Do you want to submit readings without uploading all images ?</string>

    <string name="map_api_key">AIzaSyBE1qJ6ZJzzNzcLPPslz2im3jc6g_kDEnI</string>
    <string name="title_activity_main__v2">MainActivity_V2</string>


    <!-- Icon text string-->
    <string name="icon_helpdesk">&#xe600;</string>
    <string name="icon_electricity">&#xe602;</string>
    <string name="icon_shoping">&#xe603;</string>
    <string name="icon_dth">&#xe604;</string>
    <string name="icon_ewallet">&#xe60a;</string>
    <string name="icon_water">&#xe60b;</string>
    <string name="icon_myflat">&#xe606;</string>
    <string name="icon_notification">&#xe607;</string>
    <string name="icon_send">&#xe619;</string>
    <string name="icon_civil">&#xe611;</string>
    <string name="icon_billing">&#xe60d;</string>
    <string name="icon_infra">&#xe613;</string>
    <string name="icon_it">&#xe612;</string>
    <string name="icon_others">&#xe616;</string>
    <string name="icon_lock">&#xe615;</string>
    <string name="icon_unlock">&#xe61d;</string>
    <string name="icon_smile">&#xe61a;</string>
    <string name="icon_sad">&#xe618;</string>
    <string name="icon_photo">&#xe617;</string>
    <string name="icon_add">&#xe60c;</string>
    <string name="icon_bulb">&#xe61f;</string>
    <string name="icon_slash">&#xe623;</string>
    <string name="icon_camera">&#xe611;</string>
    <string name="icon_meter">&#xe621;</string>
    <string name="icon_assign">&#xe61c;</string>
    <string name="icon_rupee">&#xe622;</string>
    <string name="icon_thunder">&#xe625;</string>
    <string name="icon_planner">&#xe626;</string>
    <string name="icon_sign_out">&#xf011;</string>
    <string name="icon_calendar_normal">&#xE62D;</string>
    <string name="icon_calendar_selected">&#xE62C;</string>
    <string name="icon_wallet_topup">&#xE628;</string>
    <string name="icon_maintenance">&#xE62E;</string>

    <string name="icon_left_arrow">&#xF104;</string>
    <string name="icon_right_arrow">&#xF105;</string>
    <string name="icon_top_arrow">&#xF106;</string>
    <string name="icon_bottom_arrow">&#xF107;</string>

    <string-array name="priority">
        <item>Regular</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

    <string-array name="durationSpinner">
        <item>Today</item>
        <item>Yesterday</item>
        <item>Last 7 days</item>
        <item>This month</item>
        <!--<item>Last month</item>-->
        <!--<item>Last 3 months</item>-->
        <!--<item>Last 6 months</item>-->
        <!--<item>Last Year</item>-->
    </string-array>

</resources>
