<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/submit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <EditText
                    android:id="@+id/noOfPersons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:hint="@string/enter_number_of_person"
                    android:inputType="number"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/details"
                    android:paddingEnd="12dp"
                    android:paddingStart="12dp"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/detailsWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <EditText
                    android:id="@+id/details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:hint="@string/enter_details"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLines="5"
                    android:paddingEnd="12sp"
                    android:paddingStart="12dp"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/photoList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/submit"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/submit" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/submit"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_photo_camera_white_24dp" />

</RelativeLayout>