<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bw_color_white">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="270dp"
        android:layout_height="170dp"
        android:layout_centerHorizontal="true"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:src="@drawable/simply_smart_logo" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/logo"
        android:layout_alignStart="@+id/logo"
        android:layout_below="@+id/logo">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_nameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:hint="@string/hint_username"
                android:inputType="textNoSuggestions"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/user_nameWrapper"
            android:layout_alignStart="@+id/user_nameWrapper"
            android:layout_below="@id/user_nameWrapper"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="14sp" />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:id="@+id/llCompanySpinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignEnd="@+id/user_nameWrapper"
            android:layout_alignStart="@+id/user_nameWrapper"
            android:layout_below="@+id/passwordWrapper"
            android:layout_marginTop="15dp"
            android:visibility="gone">

            <Spinner
                android:id="@+id/companySpinner"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/bw_input_bg" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="6dp"
                android:src="@drawable/bw_down_arrow" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/user_nameWrapper"
            android:layout_alignStart="@+id/user_nameWrapper"
            android:layout_below="@+id/llCompanySpinner"
            android:layout_marginTop="15dp"
            android:background="@color/accent"
            android:padding="4dp"
            android:text="@string/txt_login"
            android:textColor="@color/bw_color_white"
            android:textSize="14sp" />

    </RelativeLayout>


</RelativeLayout>
