<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_Layout"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_below="@id/toolbar_Layout"
        android:layout_above="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/noOfPersons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="@string/enter_number_of_person"
                        android:inputType="number"
                        android:nextFocusDown="@+id/details"
                        android:paddingStart="12dp"
                        android:textSize="16sp"
                        android:windowSoftInputMode="adjustPan" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:hint="@string/enter_details"
                        android:inputType="textCapSentences|textMultiLine"
                        android:paddingStart="12dp"
                        android:textSize="16sp"
                        android:windowSoftInputMode="adjustPan" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/take_pic_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="12dp"
                    android:weightSum="1.0">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:text="Click to add pictures :"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:src="@drawable/ic_camera_alt_black_48dp" />

                </LinearLayout>

                <GridLayout
                    android:id="@+id/view_pics_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:orientation="vertical" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/submit"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/submit" />

</RelativeLayout>